--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,20 @@
     padding: 0;
     color: #1e9aa0;
 }
+
 .header {
     height: 90px;
     background: linear-gradient(177.09deg, #FFFFFF 6.15%, #1e9aa0 202.69%);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
 }
+
 .header-title {
     font-size: 40px;
 }
+
 .btn-cart {
     padding: 7px 15px;
     background: #1e9aa0;
@@ -24,6 +26,39 @@
     box-sizing: border-box;
     color: white;
 }
+
+.basket-wrp. {
+    position: relative;
+}
+
+.basket {
+    display: none;
+}
+
+.basket-active {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    background-color: white;
+    border: 1px solid #1e9aa0;
+}
+
+.basket-title {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 700;
+}
+
+.basket-item {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    gap: 10px;
+    margin: 10px;
+}
+
 .products {
     display: flex;
     justify-content: space-between;
@@ -31,19 +66,21 @@
     gap: 20px;
     padding: 50px 20px;
 }
+
 .product-item {
     max-width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 img {
     width: 100%;
     padding-bottom: 10px;
 }
-.buy-btn {
-    padding: 7px 15px;
-    background: #1e9aa0;
+
+.btn {
+    background-color: #1e9aa0;
     box-shadow: 0 0 3px rgba(13, 96, 111, 0.08), 0 2px 3px rgba(13, 96, 111, 0.16);
     border-radius: 10px;
     border: none;
@@ -52,9 +89,20 @@ img {
     margin-top: 10px;
 }
 
-.btn-cart:hover,
-.btn-cart:focus,
-.buy-btn:hover,
-.buy-btn:focus {
+.buy-btn {
+    padding: 7px 15px;
+}
+
+.bnt-wrp {
+    display: flex;
+    justify-content: center;
+}
+
+.delete-btn {
+    padding: 5px 15px;
+}
+
+.btn:hover,
+.btn:focus {
     opacity: 0.7;
 }
